Day08 - Refactoring